--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
@@ -64,14 +64,10 @@
   }
 
   &__date {
-    max-width: 90%;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: 5%;
-    padding: 15px 15px 15px 50px;
+    padding: var(--half-gutter-width-mobile);
 
     @media (--viewport-md-min) {
-      max-width: 58%;
+      padding: var(--half-gutter-width);
     }
   }
 
