--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
@@ -64,10 +64,10 @@
   }
 
   &__date {
-    padding: var(--half-gutter-width-mobile);
+    padding: var(--half-gutter-width-mobile) 0;
 
     @media (--viewport-md-min) {
-      padding: var(--half-gutter-width);
+      padding: var(--half-gutter-width) 0;
     }
   }
 
@@ -75,8 +75,4 @@
     max-width: 100%;
     height: auto;
   }
-}
-
-a.author-information {
-  text-decoration: none !important;
 }
