SIS2-365, SIS2-302, SIS2-432, SIS2-449, SIS2-496, SIS2-372, SIS2-431, SIS2-403

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -120,13 +120,16 @@
 
   &__inspiration-item {
     margin-bottom: 20px;
-
+    a {
+      text-decoration: none;
+    }
     &:last-child {
       margin-bottom: 0;
     }
 
     &__type {
       font-size: var(--base-font-size-small);
+      text-decoration: none;
     }
 
     &__link {
