--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -192,25 +192,27 @@
 				{% endif %}
 				{% if node.field_factboxes.value %}
 					{% for factboxe in node.field_factboxes %}
-						<div class="facts-box">
-							<div class="facts-box__title">
-								{{ factboxe.entity.field_factbox_title.value }}
-							</div>
-							<div class="facts-box__content">
-								{% if factboxe.entity.field_factbox_subtitle.value %}
-									<div class="facts-box__content-item--faktabox">
-										<div class="facts-box__content-item-label">
-											{{ factboxe.entity.field_factbox_subtitle.value }}
-										</div>
-										<div class="facts-box__content-item-value">
-											{{ factboxe.entity.field_factbox_content.value|t }}
-										</div>
-									</div>
-								{% else %}
-									{{ factboxe.entity.field_factbox_content.value|t }}
-								{% endif %}
-							</div>
-						</div>
+            {% if factboxe.entity.field_factbox_content.value %}
+              <div class="facts-box">
+                <div class="facts-box__title">
+                  {{ factboxe.entity.field_factbox_title.value }}
+                </div>
+                <div class="facts-box__content">
+                  {% if factboxe.entity.field_factbox_subtitle.value %}
+                    <div class="facts-box__content-item--faktabox">
+                      <div class="facts-box__content-item-label">
+                        {{ factboxe.entity.field_factbox_subtitle.value }}
+                      </div>
+                      <div class="facts-box__content-item-value">
+                        {{ factboxe.entity.field_factbox_content.value|t }}
+                      </div>
+                    </div>
+                  {% else %}
+                    {{ factboxe.entity.field_factbox_content.value|t }}
+                  {% endif %}
+                </div>
+              </div>
+            {% endif %}
 					{% endfor %}
 				{% endif %}
 				{% if node.field_time.value %}
