SIS-N/A: Lots of adjustments

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/form-styling.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/form-styling.css
@@ -47,3 +47,18 @@
   }
 }
 
+#edit-field-factboxes {
+  margin-bottom: 25px;
+}
+
+.js-filter-guidelines {
+  display: none;
+}
+
+#edit-field-institution-0-format {
+  display: none;
+}
+
+.js-filter-wrapper {
+  display: none;
+}
