--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--slideshow.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--slideshow.html.twig
@@ -74,9 +74,11 @@
       <a href="{{ url }}" class="entity-slideshow__item-link">
         <div class="entity-slideshow__image">
           {{ news_image }}
-          <div class="entity-slideshow__type entity-slideshow__type--news">
-            {{ node.type.entity.label }}
-          </div>
+          <a href="/nyhedoversigt">
+            <div class="entity-slideshow__type entity-slideshow__type--news">
+              {{ node.type.entity.label }}
+            </div>
+          </a>
         </div>
         <div class="entity-slideshow__content-wrapper">
           <div class="entity-slideshow__content">
