SIS2-512: Setup styles in CKEditor to use custom classes and tags and removed formats from basic_html and full_html filter formats

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
@@ -72,6 +72,11 @@ h5 {
 
 p {
   margin-top: 0;
+
+  &.resume {
+    font-size: var(--base-font-size-large);
+    font-family: var(--base-font-family);
+  }
 }
 
 .large-text {
