--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/ckeditor.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/ckeditor.css
@@ -37,26 +37,36 @@ media {
   width: 100%;
   display: block;
   text-align: center;
+
   picture {
     display: inline-block;
     margin-left: auto;
   }
+
   button {
     position: absolute;
     top: 10px;
   }
+
   &.align-center,
   &.align-left,
   &.align-right {
    float: none;
   }
+
   &.align-right {
    text-align: right;
   }
+
   &.align-left {
    text-align: left;
   }
+
   &.align-center {
    text-align: center;
   }
+}
+
+p.resume {
+  font-size: 20px;
 }
