--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -112,7 +112,9 @@
                 {{ content.field_article_image|render }}
 			      {% endif %}
           </div>
+          <div class="article-page__content">
             {{ content.body }}
+          </div>
         </div>
       </div>
       <div class="col-md-4 col-lg-4 col-lg-offset-1 article-content-sidebar">
