SIS2-NA: A few more fixes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--slideshow.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--slideshow.html.twig
@@ -73,7 +73,9 @@
     <div class="entity-slideshow__item-inner">
       <a href="{{ url }}" class="entity-slideshow__item-link">
         <div class="entity-slideshow__image">
-          {{ blog_image }}
+          {% if blog_image %}
+            {{ blog_image }}
+          {% endif %}
           <a href="/blogs">
             <div class="entity-slideshow__type entity-slideshow__type--blog">
               {{ node.type.entity.label }}
