SIS2-401, SIS2-430, SIS2-491, SIS2-469, SIS2-504, SIS2-507, SIS2-508

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/section-bg-graphics.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/section-bg-graphics.css
@@ -203,6 +203,7 @@
 }
 
 .section--background-graphics:not(.theme) {
+  position: relative;
   @media (--viewport-sm-min) {
     overflow: hidden;
   }
