SIS2-511: Change label color

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -108,7 +108,7 @@
 
     &--blog {
       color: var(--color-purple-dark);
-      background-color: var(--color-pink);
+      background-color: var(--color-apricot);
     }
   }
 
