--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
@@ -103,14 +103,14 @@
       text-decoration: none;
       color: unset;
     }
-    
+
     &--news {
       background-color: var(--color-red);
     }
 
     &--blog {
       color: var(--color-purple-dark);
-      background-color: var(--color-pink);
+      background-color: var(--color-apricot);
     }
 
     &--page {
