--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/form-styling.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/form-styling.css
@@ -62,3 +62,18 @@
 .js-filter-wrapper {
   display: none;
 }
+
+.node-edit-form {
+  &__title {
+    #block-pageheader {
+      margin-top: 25px;
+      margin-bottom: 25px;
+    }
+  }
+}
+
+.entities-list {
+  input {
+    width: 100%;
+  }
+}
