SIS2-316: Adjustments to Dot on Map node

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--full.html.twig
@@ -216,7 +216,7 @@
               Kontaktdata
             </div>
             <div class="facts-box__content">
-              {{ node.field_contact_information.value }}
+              {{ content.field_contact_information }}
             </div>
           </div>
         {% endif %}
