--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
@@ -1,7 +1,7 @@
 .blog-post {
   .all-writers {
     .facts-box {
-      height: 240px;
+      height: calc(100% - 40px);
       overflow: hidden;
     }
   }
