--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -1,6 +1,7 @@
 .facts-box {
   margin-bottom: 40px;
-  word-break: break-all;
+  word-wrap: break-word;
+  hyphens: auto;
   background-color: var(--color-white);
   box-shadow: 0 4px 30px rgb(131 131 131 / 25%);
 
@@ -144,4 +145,9 @@
       }
     }
   }
+}
+
+a.facts-box {
+  display: block;
+  text-decoration: none;
 }
