--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/appetiser.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/appetiser.css
@@ -177,9 +177,9 @@
       height: 100%;
 
       img {
-        width: auto;
-        max-width: none;
+        width: 100%;
         height: 100%;
+        object-fit: contain;
       }
     }
 
