SIS2-525, SIS2-526, SIS2-533, SIS2-475, SIS2-520, SIS2-521, SIS2-530

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/css/sis_almanac.css
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/css/sis_almanac.css
@@ -19,6 +19,7 @@ li.almanac__list-item--active {
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 4px;
+  text-transform: lowercase;
 }
 
 .almanac__list-item-content {
