--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -122,6 +122,7 @@ figure {
     height: auto;
     margin: 0 auto;
     transition: opacity .2s;
+    float: none !important;
   }
 
   figcaption {
