--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/ckeditor.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/ckeditor.css
@@ -33,6 +33,33 @@
   }
 }
 
+.cke_widget_image {
+  width: 100%;
+  float: none !important;
+  img {
+    display: block;
+  }
+  &[style="float: left;"] {
+    img {
+      margin-right: auto;
+      margin-left: 0;
+    }
+  }
+  &[style="float: right;"] {
+    img {
+      margin-right: 0;
+      margin-left: auto;
+    }
+  }
+  /*img {*/
+  /*  display: block;*/
+  /*  &[data-align="right"] {*/
+  /*    margin-left: auto;*/
+  /*    margin-right: 0;*/
+  /*  }*/
+  /*}*/
+}
+
 media {
   width: 100%;
   display: block;
