--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -409,10 +409,11 @@
 
 .entity-overview-filter-blog-form {
   .overview-form-contents {
-    grid-template-columns: repeat(4,1fr);
+    @media (--viewport-md-min) {
+      grid-template-columns: repeat(4, 1fr);
+    }
   }
   .overview-form__header {
-    flex-direction: row-reverse;
   }
   .filter-mobile-wrapper {
     display: flex;
