--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
@@ -38,8 +38,14 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-lg-7 col-xs-12">
-      <h1>{{ map_title }}</h1>
-      {{ description_above_map }}
+      {% if org_name %}
+        <h2>{{ map_title }} - {{ org_name }}</h2>
+        På dette kort kan du finde artikler og lokationer oprettet af {{ org_name }}. Her kan du finde idéer og inspiration til aktiviteter og undervisningsforløb i naturen.
+        {% else %}
+        <h1>{{ map_title }}</h1>
+          {{ description_above_map }}
+      {% endif %}
+
     </div>
 <a class="map-button col-md-offset-1" href="{{ button_link }}">
 	<button {{ create_attribute().addClass(button_classes) }}>
