--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
@@ -146,7 +146,7 @@
                 <form action="/newsletter/subscribe" method="post" target="_blank" class="newsletter-form">
                   <input type="hidden" name="optin_scheme" value="single" />
                   <input type="hidden" name="action" value="subscribe" />
-                  <input type="hidden" name="lists" value="74511" />
+                  <input type="hidden" name="lists" value="{{ atom_str('newsletter-list-id') }}" />
                   <input type="hidden" name="secret" value="" />
                   <div class="field-items">
                     <div class="field-item field-name">
