--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/pager-full.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/pager-full.css
@@ -14,10 +14,19 @@
   }
 
   &__item {
-    display: inline-block;
+    display: none;
     font-size: var(--base-font-size-small);
     text-align: center;
     border: 1px solid var(--color-purple);
+
+    &.pager__item--previous,
+    &.pager__item--next,
+    &.is-active {
+       display: inline-block;
+    }
+    @media (--viewport-lg-min) {
+      display: inline-block;
+    }
 
     &:not(:last-child) {
       margin-right: 4px;
