SIS2-544: Fix filters not working for webmasters

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/css/sis_map.css
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/css/sis_map.css
@@ -75,6 +75,10 @@
   display: none;
 }
 
+.expanded {
+  display: block !important;
+}
+
 .same-line-text-and-icon {
   display: flex;
   cursor: pointer;
