--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/navigation/pager.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/navigation/pager.html.twig
@@ -38,9 +38,9 @@
     <ul class="pager__items">
       {% if items.previous %}
         <li class="pager__item pager__item--previous">
-          <a class="js-pager__item" href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}"
-             rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
-            <span aria-hidden="true">{{ items.previous.text|default('Previous page'|t) }}</span>
+          <a href="{{ items.previous.href }}" title="{{ 'Go to next page'|t }}"
+             rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
+            <span aria-hidden="true">{{ items.next.text|default('Previous page'|t) }}</span>
           </a>
         </li>
       {% endif %}
