SIS2-549: Fix filters not working on organization overview, and checked by default

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/templates/organization-overview.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/templates/organization-overview.html.twig
@@ -1,6 +1,9 @@
 <div class="organization-overview">
   {{ title }}
   <div id="organization_overview_wrapper" class="organization-overview__wrapper">
+    {% if no_results %}
+      {{ no_results }}
+    {% endif %}
     {{ entities }}
   </div>
 </div>
