SIS2-550, SIS-2-559, SIS2-561, SIS2-571, SIS2-548, SIS2-494

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -301,12 +301,12 @@
 				</div>
 				<div class="modal__body">
 					<div class="row">
-						<div class="col-xs-6 modal-image__container">
+						<div class="col-xs-12 col-md-6 modal-image__container">
 							<a class="modal-link__image" href="">
 								<img class="modal__image"></img>
 						</a>
 					</div>
-					<div class="col-xs-6 modal-image__container--textbox">
+					<div class="col-xs-12 col-md-6 modal-image__container--textbox">
 						<a class="modal-link__title">
 							<h4>${randomMonthData.title}</h4>
 						</a>
