--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -15,44 +15,20 @@
 <form{{attributes.addClass('overview-form')}}>
 	<div class="container">
 
-
-		<div class="row overview-form__header overview-form__heading-facets">
-			<div class="col-xs-12 col-md-8 ">
-				<div class="overview-form__search-facets overview-form__search-facets--mobile">
-					<span class="overview-form__toolbar-label">{{ "Sorted by"|t }}:</span>
-
-
-					{{ element['facets'].sort }}
-				</div>
-
-				<div class="overview-form__search-title">
-					{{ element['search'].title }}
-				</div>
-			</div>
-
-			<div class="col-xs-12 col-md-4 filter-mobile-wrapper">
-				<div class="overview-form__toolbar">
-
-
-					<span class="overview-form__toolbar__filter-button js-overview-form__toolbar__filter-button">
-						{% include '@reusable-component/svg-icon.twig' with {
-                    'attributes': '',
-                    'svgIconName': 'filter-icon'
-                  } %}
-						{{ "Filter"|t }}
-					</span>
-				</div>
-				<div class="overview-form__search-input">
-					{% if element['facets'].text %}
-						{{ element['facets'].text }}
-						{{ element['search'].search }}
-					{% endif %}
-				</div>
-			</div>
-
-
-		</div>
-
+    <div class="form-overview-header">
+      <div class="search-title">
+        {{ element['search'].title }}
+      </div>
+      <div class="search-facets">
+        {{ element['facets'].sort }}
+        <div class="overview-form__search-input">
+          {% if element['facets'].text %}
+            {{ element['facets'].text }}
+            {{ element['search'].search }}
+          {% endif %}
+        </div>
+      </div>
+    </div>
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
