--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -1,3 +1,16 @@
+.form-overview-header {
+  display: flex;
+  gap: 20px;
+  .search-title {
+    min-width: 50%;
+  }
+  .search-facets {
+    display: flex;
+    label {
+      display: none;
+    }
+  }
+}
 .overview-form {
   &__search-input {
     position: relative;
