--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
@@ -131,17 +131,18 @@
 
   .modal__dialog {
     position: relative;
-    top: 55%;
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%, -50%);
     z-index: 2;
     display: flex;
     flex-direction: column;
     width: 600px;
-    margin: 50px auto;
     background-color: #fff;
     border-radius: 10px;
 
     @media screen and (max-width: 992px) {
-      width: 90%;
+      width: 90vw;
     }
   }
 
