SIS2-539: Fix font size on footer headers

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanacs.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanacs.html.twig
@@ -1,5 +1,5 @@
 {{ attach_library('sis_almanac/sis_almanac') }}
-<h2>Almanak</h2>
+<div class="footer__header">Almanak</div>
 {%if almanacs %}
   <ul class="almanac__list">
     {% for almanac in almanacs %}
