--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -6,6 +6,13 @@
 .footer {
   position: relative;
 
+  &__header {
+    font-size: var(--base-font-size-xlarge);
+    font-weight: var(--heading-font-weight);
+    font-family: var(--heading-font-family);
+    margin-bottom: 10px;
+  }
+
   &__graphic {
     position: relative;
     z-index: -1;
