--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
@@ -99,14 +99,14 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-3">
               {% if atom('footer-col1-header') %}
-                <h4>{{ atom('footer-col1-header') }}</h4>
+                <div class="footer__header">{{ atom('footer-col1-header') }}</div>
               {% endif %}
               {{ latest_content }}
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
               <div class="footer-some-header">
                 {% if atom('footer-col2-header') %}
-                  <h4>{{ atom('footer-col2-header') }}</h4>
+                <div class="footer__header">{{ atom('footer-col2-header') }}</div>
                 {% endif %}
               </div>
               <div class="footer-some-icons">
@@ -142,7 +142,7 @@
             <div class="col-xs-12 col-sm-6 col-md-3">
 
               {% if atom('footer-col4-link').0['#url'] %}
-                <h4>Tilmeld dig nyhedsbrevet</h4>
+                <div class="footer__header">Tilmeld dig nyhedsbrevet</div>
                 <form action="/newsletter/subscribe" method="post" target="_blank" class="newsletter-form">
                   <input type="hidden" name="optin_scheme" value="double" />
                   <input type="hidden" name="action" value="subscribe" />
