--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/ckeditor.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/ckeditor.css
@@ -45,7 +45,8 @@ drupal-entity {
   &[data-align="center"] {
     text-align: center;
   }
-  > div {
+  > div,
+  > figure {
     float: none !important;
     margin: 0 auto;
     display: inline-block;
