--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -77,6 +77,19 @@
 
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .icon {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 28px;
+      height: 28px;
+      padding: 5px;
+      background-color: #fff;
+      pointer-events: none;
     }
   }
 
@@ -90,6 +103,11 @@
     font-size: var(--base-font-size-extra-small);
     font-family: var(--base-font-family);
     background-color: var(--color-primary);
+
+    &--bottom {
+      top: auto;
+      bottom: 0;
+    }
 
     &.clickable {
       &:hover {
@@ -312,5 +330,166 @@
 .inspiration-overview__item-link {
   &--blog {
     height: 100%;
+  }
+}
+
+.ui-dialog.article-modal {
+  width: 96% !important;
+
+  @media (--viewport-sm-min) {
+    width: 600px !important;
+  }
+
+  @media (--viewport-md-min) {
+    width: 800px !important;
+  }
+
+  .ui-dialog-titlebar {
+    padding: 10px var(--container-spacing);
+    background: none;
+    border: none;
+    border-bottom: 1px solid rgba(0 0 0 / 10%);
+    border-radius: 0;
+  }
+
+  .ui-dialog-titlebar-close {
+    right: var(--container-spacing);
+    margin: 0;
+    background: none;
+    border: none;
+    transform: translateY(-50%);
+  }
+
+  .ui-button-icon {
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    margin-top: 0;
+    margin-left: 0;
+    background: none;
+
+    &::before {
+      position: absolute;
+      top: 8px;
+      left: 0;
+      display: block;
+      width: 20px;
+      height: 1px;
+      background-color: rgba(0 0 0 / 50%);
+      transform: rotate(45deg);
+      content: "";
+    }
+
+    &::after {
+      position: absolute;
+      top: 8px;
+      left: 0;
+      display: block;
+      width: 20px;
+      height: 1px;
+      background-color: rgba(0 0 0 / 50%);
+      transform: rotate(-45deg);
+      content: "";
+    }
+  }
+
+  .ui-dialog-content {
+    padding: 0 var(--container-spacing);
+  }
+
+  .article-page__modal {
+    &__content {
+      display: flex;
+      flex-flow: column;
+      order: 2;
+
+      @media (--viewport-sm-min) {
+        order: 1;
+        width: 50%;
+        padding-right: var(--container-spacing);
+      }
+    }
+
+    &__inner {
+      display: flex;
+      flex-flow: column;
+      width: 100%;
+      padding: var(--container-spacing) 0;
+
+      @media (--viewport-sm-min) {
+        flex-flow: row;
+      }
+    }
+
+    &__image {
+      display: flex;
+      order: 1;
+      margin-bottom: 10px;
+
+      @media (--viewport-sm-min) {
+        order: 2;
+        width: 50%;
+        margin-bottom: 0;
+        padding-left: var(--container-spacing);
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+
+      &-logo {
+        display: flex;
+        justify-content: center;
+      }
+    }
+
+    &-tags {
+      display: flex;
+      flex-flow: row;
+      flex-wrap: wrap;
+      margin-bottom: 10px;
+    }
+
+    &-tag {
+      display: inline-flex;
+      margin-right: 5px;
+      margin-bottom: 5px;
+      padding: 5px 15px;
+      font-weight: 800;
+      font-size: var(--base-font-size-extra-small);
+      font-family: var(--base-font-family);
+      text-decoration: none;
+      background-color: var(--color-yellow);
+    }
+
+    &__footer {
+      display: flex;
+      justify-content: flex-end;
+      margin: 0 calc(var(--container-spacing) * -1);
+      padding: 10px var(--container-spacing);
+      border-top: 1px solid rgba(0 0 0 / 10%);
+
+      a.button {
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 45px;
+        padding: 0 20px;
+        overflow: visible;
+        color: var(--color-white);
+        font-weight: 800;
+        font-size: var(--base-font-size-small);
+        font-family: var(--base-font-family);
+        white-space: nowrap;
+        text-decoration: none;
+        background-color: var(--color-green-dark);
+        border: 2px solid var(--color-green-dark);
+        border-radius: 50px;
+        cursor: pointer;
+      }
+    }
   }
 }
