--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--news-overview.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--news-overview.html.twig
@@ -35,7 +35,9 @@
   {% block content %}
     <div class="row">
       <div class="col-md-12 col-lg-12 col-xs-12"><h1>{{ content.field_title }}</h1></div>
-      <div class="col-md-12 col-lg-8 col-xs-12">{{ content.field_description }}</div>
+      <div class="col-md-12 col-lg-8 col-xs-12">
+        <p class="resume">{{ content.field_description }}</p>
+      </div>
       <div class="col-md-12 col-lg-4 col-xs-12 ">
         {% if content.field_link.0['#url'] %}
           <a href="{{ content.field_link.0['#url'] }}" class="button button--green">
