SIS2-575: Show editor uploaded list media as priority on node list template

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--list.html.twig
@@ -73,10 +73,10 @@
   <div class="inspiration-overview__item-inner">
     <a href="{{ url }}" class="inspiration-overview__item-link">
       <div class="inspiration-overview__image">
-        {% if content.field_list_media_anonymous[0] %}
-            {{ content.field_list_media_anonymous }}
-          {% else %}
-            {{ content.field_list_media }}
+        {% if content.field_list_media[0] %}
+          {{ content.field_list_media }}
+        {% elseif content.field_list_media_anonymous[0]%}
+          {{ content.field_list_media_anonymous }}
         {% endif %}
         <a href="/blogs">
           <div class="inspiration-overview__type inspiration-overview__type--blog">
