--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
@@ -78,10 +78,10 @@
 	<div class="inspiration-overview__item-inner">
 		<a href="{{ url }}" class="inspiration-overview__item-link" aria-label="{{ node.field_article_type.entity.name.value }}">
 			<div class="inspiration-overview__image">
-        {% if content.field_list_media_anonymous[0] %}
-            {{ content.field_list_media_anonymous }}
-          {% else %}
+        {% if content.field_list_media[0] %}
             {{ content.field_list_media }}
+          {% elseif content.field_list_media_anonymous[0]%}
+            {{ content.field_list_media_anonymous }}
         {% endif %}
 				<a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}">
 					<div class="inspiration-overview__type">
