--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--list.html.twig
@@ -75,8 +75,8 @@
 				<div class="inspiration-overview__image inspiration-overview__image__dot-on-map">
           {% if content.field_list_media[0] %}
             {{ content.field_list_media }}
-            {% else %}
-              {{ content.field_list_media_anonymous }}
+          {% elseif content.field_list_media_anonymous[0]%}
+            {{ content.field_list_media_anonymous }}
           {% endif %}
           <a href="/kort" aria-label="{{ node.field_article_type.entity.name.value }}">
             <div class="inspiration-overview__type">
