--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-page.css
@@ -15,7 +15,7 @@
   }
 
   &__content {
-    word-break: break-all;
+    word-break: break-word;
 
     & h2 {
       font-size: var(--base-font-size-xxlarge) !important;
