SIS2-583, SIS2-585, SIS2-586, SIS2-587

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -394,7 +394,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-8 col-md-8">
             <div class="article-page__related-header">
-              <h3>Måske du også leder efter...</h3>
+              <h3>Læs også</h3>
               <p>Gå på opdagelse i vores aktiviteter og materialer og find lige det, der passer til din undervisning.</p>
             </div>
           </div>
@@ -426,7 +426,7 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-8 col-md-8">
 						<div class="article-page__related-header">
-							<h3>Måske du også leder efter...</h3>
+							<h3>Læs også</h3>
 							<p>Gå på opdagelse i vores aktiviteter og materialer og find lige det, der passer til din undervisning.</p>
 						</div>
 					</div>
