--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--news-overview.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--news-overview.html.twig
@@ -38,7 +38,7 @@
       <div class="col-md-12 col-lg-8 col-xs-12">
         <p class="resume">{{ content.field_description }}</p>
       </div>
-      <div class="col-md-12 col-lg-4 col-xs-12 ">
+      <div class="col-md-12 col-lg-4 col-xs-12 " style="text-align: right">
         {% if content.field_link.0['#url'] %}
           <a href="{{ content.field_link.0['#url'] }}" class="button button--green">
               {{ content.field_link.0['#title'] }}
