--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -250,7 +250,9 @@
 																																																																																																													c-0.3,1.8-0.1,3.7,0.3,5.5L276,233.2z"/>
 						</g>
 						<path class="st2 red-knob" @click="getCurrentMonthRandomArticle()" d="M290,332.4c23.4,0,42.4-19,42.4-42.4c0-23.4-19-42.4-42.4-42.4c-23.4,0-42.4,19-42.4,42.4
-																																																																																												C247.6,313.4,266.6,332.4,290,332.4z"/>
+																																																																																												C247.6,313.4,266.6,332.4,290,332.4z">
+              <title>Klik og få en ide</title>
+            </path>
 					</svg>
 				</div>
 			</div>
