--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -159,6 +159,7 @@
     &--blog-post {
       margin-bottom: 0 !important; /* stylelint-disable-line */
       padding-left: 20px;
+      padding-right: 20px;
     }
   }
 
