--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -394,8 +394,8 @@
         <div class="row">
           <div class="col-xs-12 col-sm-8 col-md-8">
             <div class="article-page__related-header">
-              <h3>Læs også</h3>
-              <p>Gå på opdagelse i vores aktiviteter og materialer og find lige det, der passer til din undervisning.</p>
+              <h2>Læs også</h2>
+{#              <p>Gå på opdagelse i vores aktiviteter og materialer og find lige det, der passer til din undervisning.</p>#}
             </div>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
@@ -426,8 +426,8 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-8 col-md-8">
 						<div class="article-page__related-header">
-							<h3>Læs også</h3>
-							<p>Gå på opdagelse i vores aktiviteter og materialer og find lige det, der passer til din undervisning.</p>
+							<h2>Læs også</h2>
+{#							<p>Gå på opdagelse i vores aktiviteter og materialer og find lige det, der passer til din undervisning.</p>#}
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
