--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -42,7 +42,7 @@
   --theme-button-color: var(--color-purple);
   --theme-arrow-background-color: var(--color-green);
   --theme-arrow-color: var(--color-white);
-  --theme-link-color: var(--color-black);
+  --theme-link-color: var(--color-purple);
   --theme-divider-background-color: var(--color-black);
   --theme-accordion-color: var(--color-purple);
   --theme-accordion-border-color: rgba(61 41 89 / 30%);
