--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -82,7 +82,8 @@
       overflow: hidden;
 
       img {
-        width: 100%;
+        max-width: 100%;
+        height: auto;
       }
     }
   }
