--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-blog-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-blog-form.html.twig
@@ -14,24 +14,39 @@
 
 <form{{ attributes.addClass('overview-form') }}>
   <div>
-    <div class="row overview-form__header overview-form__heading-facets">
-      <div class="col-xs-12 col-md-8">
-        {% if element['facets'].sort %}
-          <div class="overview-form__search-facets overview-form__search-facets--mobile">
-            <span class="overview-form__toolbar-label">{{ "Sorted by"|t }}:</span>
-              {{ element['facets'].sort|without('#title') }}
-          </div>
-        {% endif %}
+
+    <div class="form-overview-header">
+      <div class="search-title">
+        {{ element['search'].title }}
       </div>
-      <div class="col-xs-12 col-md-4">
-        {% if element['facets'].text %}
-          <div class="overview-form__search-input">
+      <div class="search-facets">
+        {{ element['facets'].sort }}
+        <div class="overview-form__search-input">
+          {% if element['facets'].text %}
             {{ element['facets'].text }}
             {{ element['search'].search }}
-          </div>
-        {% endif %}
+          {% endif %}
+        </div>
       </div>
     </div>
+{#    <div class="row overview-form__header overview-form__heading-facets">#}
+{#      <div class="col-xs-12 col-md-8">#}
+{#        {% if element['facets'].sort %}#}
+{#          <div class="overview-form__search-facets overview-form__search-facets--mobile">#}
+{#            <span class="overview-form__toolbar-label">{{ "Sorted by"|t }}:</span>#}
+{#              {{ element['facets'].sort|without('#title') }}#}
+{#          </div>#}
+{#        {% endif %}#}
+{#      </div>#}
+{#      <div class="col-xs-12 col-md-4">#}
+{#        {% if element['facets'].text %}#}
+{#          <div class="overview-form__search-input">#}
+{#            {{ element['facets'].text }}#}
+{#            {{ element['search'].search }}#}
+{#          </div>#}
+{#        {% endif %}#}
+{#      </div>#}
+{#    </div>#}
     <div class="row">
       <div class="col-xs-12 col-md-12">
         <div class="row">
