--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page--organizations.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page--organizations.html.twig
@@ -1,6 +1,8 @@
 {{ attach_library('sis/organization-page') }}
 {{ attach_library('sis/section-bg-graphics') }}
 
+{{ breadcrumb }}
+
 <section class="section section--spacing-top-medium section--spacing-bottom-medium section--background-graphics">
 	<img src="/sites/skoven-i-skolen.dk/themes/custom/sis/dist/images/wind.svg" class="section-bg-graphics__image section-bg-graphics__image--wind section-bg-graphics__position--right">
 	<div class="container">
