--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/organization-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/organization-overview.css
@@ -49,19 +49,28 @@
 
     @media (--viewport-ms-min) {
       width: 50%;
-    }
+      padding: var(--container-spacing);
 
-    @media (--viewport-sm-min) {
-      width: 50%;
+      .entity-overview-search-page overview-form & {
+        width: 100%;
+      }
     }
 
     @media (--viewport-md-min) {
       width: calc(100% / 3);
       padding: var(--container-spacing);
+
+      .entity-overview-search-page overview-form & {
+        width: 100%;
+      }
     }
 
     @media (--viewport-lg-min) {
       width: 25%;
+
+      .entity-overview-search-page overview-form & {
+        width: 100%;
+      }
     }
   }
 
